# molpack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  zensical.toml
.claude/: NOTES.md
.claude/agents/: mpk-architect.md  mpk-bindings.md  mpk-documenter.md  mpk-numerics.md  mpk-perf.md  mpk-tester.md
.claude/skills/mpk-arch/: SKILL.md
.claude/skills/mpk-bindings/: SKILL.md
.claude/skills/mpk-debug/: SKILL.md
.claude/skills/mpk-docs/: SKILL.md
.claude/skills/mpk-fix/: SKILL.md
.claude/skills/mpk-impl/: SKILL.md
.claude/skills/mpk-note/: SKILL.md
.claude/skills/mpk-numerics/: SKILL.md
.claude/skills/mpk-perf/: SKILL.md
.claude/skills/mpk-refactor/: SKILL.md
.claude/skills/mpk-review/: SKILL.md
.claude/skills/mpk-spec/: SKILL.md
.claude/skills/mpk-test/: SKILL.md
.claude/specs/: INDEX.md  gencan-anneal-budget.md  profile-distribution-restraints-01-split.acceptance.md  profile-distribution-restraints-01-split.md  profile-distribution-restraints-02-coordinate.acceptance.md  profile-distribution-restraints-02-coordinate.md  profile-distribution-restraints-03-distribution.acceptance.md  profile-distribution-restraints-03-distribution.md  profile-distribution-restraints-04-spline.acceptance.md  profile-distribution-restraints-04-spline.md  profile-distribution-restraints-05-compose.acceptance.md  profile-distribution-restraints-05-compose.md  profile-distribution-restraints-06-script.acceptance.md  profile-distribution-restraints-06-script.md  rust-review-improvements.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  publish-crate.yml  publish-pypi.yml
benches/: evaluate_unscaled.rs  objective_dispatch.rs  pack_end_to_end.rs  pair_kernel.rs  partial_gradient_merge.rs  run_iteration.rs  run_phase.rs
docs/: api_redesign.md  api_redesign_deferred.md  api_redesign_python.md  architecture.md  concepts.md  examples.md  extending.md  getting_started.md  index.md  install.md  packmol_alignment.md  packmol_parity.md
docs/api/: index.md
docs/python/: api_reference.md  index.md  packer.md  periodic_boundaries.md  restraints.md  targets.md
examples/mc_fold_chain/: main.rs
examples/mt_scaling/: main.rs
examples/pack_bilayer/: bilayer-comment.inp  main.rs
examples/pack_interface/: chlor.xyz  interface.inp  main.rs  t3.xyz
examples/pack_mixture/: main.rs  mixture.inp
examples/pack_polymer_vesicle/: main.rs
examples/pack_solvprotein/: main.rs  solvprotein.inp
examples/pack_spherical/: main.rs  spherical-comment.inp
examples/validate_packed/: main.rs
python/: Cargo.toml  README.md  pyproject.toml
python/docs/: README.md  zensical.toml
python/docs/docs/: api-reference.md  examples.md  getting-started.md  index.md  installation.md
python/docs/docs/guide/: packer.md  periodic-boundaries.md  restraints.md  targets.md
python/examples/: _common.py  pack_bilayer.py  pack_interface.py  pack_mixture.py  pack_profile_monolayer.py  pack_solvprotein.py  pack_spherical.py  pack_water_cube.py  profile_monolayer_extensibility.md  profile_speed_py_vs_rust.py
python/python/molpack/: __init__.py  _assemble.py  _protocols.py  cli.py  molpack.pyi  relaxer.py
python/src/: assemble.rs  constraint.rs  frame_marshal.rs  handler.rs  helpers.rs  interop.rs  lib.rs  packer.rs  parallel.rs  relaxer.rs  script.rs  target.rs  types.rs
python/tests/: test_assemble.py  test_collective_restraint.py  test_common_loader.py  test_constraint.py  test_custom_restraint.py  test_examples_smoke.py  test_handler.py  test_integration.py  test_pack_result.py  test_packer.py  test_relaxer.py
src/: assemble.rs  cases.rs  cell.rs  error.rs  euler.rs  frame.rs  handler.rs  initial.rs  lib.rs  movebad.rs  numerics.rs  objective.rs  packer.rs  random.rs  region.rs  relaxer.rs  restraint.rs  target.rs  validation.rs
src/api/: mod.rs
src/context/: eval.rs  mod.rs  model.rs  pack_context.rs  state.rs  work_buffers.rs
src/gencan/: cg.rs  mod.rs  spg.rs
src/relaxer/: lbfgs.rs  mod.rs
src/restraint/: cylinder.rs  gaussian.rs  inside.rs  mod.rs  outside.rs  plane.rs
src/restraint/collective/: engine.rs  exponential.rs  gaussian.rs  geometry.rs  mod.rs  tabulated.rs
src/restraint/geometric/: bounded.rs  mod.rs  surface.rs
src/restraint/profile/: coordinate.rs  distribution.rs  mod.rs  restraint.rs  spline.rs
src/restraint/profile/tests/: compose.rs  mod.rs
src/script/: build.rs  error.rs  io.rs  mod.rs  parser.rs  parser_profile.rs  restraint_parse.rs
tests/: cli.rs  euler.rs  examples_batch.rs  gencan.rs  geometry_cache.rs  gradient.rs  packer.rs  parallel_equivalence.rs  profile_pack_e2e.rs  relaxer.rs  relaxer_lbfgs.rs  restraint.rs  restraint_pack_e2e.rs  target.rs
