[package]
name = "molcrafts-molpack"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["MolCrafts"]
license = "BSD-3-Clause"
description = "Faithful Rust port of Packmol molecular packing (split off from molrs)"
repository = "https://github.com/MolCrafts/molpack"
homepage = "https://github.com/MolCrafts/molpack"
documentation = "https://docs.rs/molcrafts-molpack"
readme = "README.md"
keywords = ["packmol", "molecular-modeling", "chemistry", "simulation"]
categories = ["science", "algorithms"]

[lib]
name = "molpack"

[dependencies]
# Path deps are for local development; `version` fields are used by
# `cargo publish` to resolve against the crates.io registry.
#
# Library-required:
molrs = { path = "../molrs/molrs-core", version = "0.0.14", package = "molcrafts-molrs-core", default-features = false }
# Only required when the `io` (or `cli`) feature is enabled. Front-ends that
# bring their own frame loader — notably the PyO3 wheel, which delegates to
# molrs's Python bindings — opt out and avoid the static-link cost.
molrs_io = { path = "../molrs/molrs-io", version = "0.0.14", package = "molcrafts-molrs-io", default-features = false, optional = true }
rand = "0.9"
ndarray = "0.17"
log = "0.4"

# Opt-in parallelism:
rayon = { version = "1.11", optional = true }

# CLI-only:
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = []
rayon = ["dep:rayon", "molrs/rayon"]
# Pulls in molrs-io for the built-in script loader, example programs, and the
# molpack CLI. PyO3 / WASM front-ends typically leave this off and provide
# their own frame loader through `Script::lower` + `Target::from_frame_parts`.
io = ["dep:molrs_io"]
# Enables the `molpack` binary and its integration tests.
cli = ["dep:clap", "io"]

[dev-dependencies]
criterion = "0.5"
# Used by the example programs under `examples/`.
env_logger = "0.11"

[[bench]]
name = "pack_end_to_end"
harness = false

[[bench]]
name = "evaluate_unscaled"
harness = false

[[bench]]
name = "run_iteration"
harness = false

[[bench]]
name = "run_phase"
harness = false

[[bench]]
name = "objective_dispatch"
harness = false

[[bench]]
name = "pair_kernel"
harness = false

[[bench]]
name = "partial_gradient_merge"
harness = false
required-features = ["rayon"]

[[bin]]
name = "molpack"
path = "src/bin/molpack/main.rs"
required-features = ["cli"]

[[test]]
name = "cli"
path = "tests/cli.rs"
required-features = ["cli"]

# Uses the `cases` example harness, which reads PDB files via molrs-io.
[[test]]
name = "examples_batch"
path = "tests/examples_batch.rs"
required-features = ["io"]

# Example programs all read PDB files via molrs-io directly, so they need
# the `io` feature on. Run with `cargo run --example <name> --features io`.
[[example]]
name = "pack_mixture"
path = "examples/pack_mixture/main.rs"
required-features = ["io"]

[[example]]
name = "pack_bilayer"
path = "examples/pack_bilayer/main.rs"
required-features = ["io"]

[[example]]
name = "pack_interface"
path = "examples/pack_interface/main.rs"
required-features = ["io"]

[[example]]
name = "pack_solvprotein"
path = "examples/pack_solvprotein/main.rs"
required-features = ["io"]

[[example]]
name = "pack_spherical"
path = "examples/pack_spherical/main.rs"
required-features = ["io"]

[[example]]
name = "pack_polymer_vesicle"
path = "examples/pack_polymer_vesicle/main.rs"
required-features = ["io"]

[[example]]
name = "mc_fold_chain"
path = "examples/mc_fold_chain/main.rs"
required-features = ["io"]

[profile.release]
lto = "thin"
codegen-units = 1
