[package]
name = "molcrafts-molpack"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["MolCrafts"]
license = "BSD-3-Clause"
description = "Faithful Rust port of Packmol molecular packing (split off from molrs)"
repository = "https://github.com/MolCrafts/molpack"
homepage = "https://github.com/MolCrafts/molpack"
documentation = "https://docs.rs/molcrafts-molpack"
readme = "README.md"
keywords = ["packmol", "molecular-modeling", "chemistry", "simulation"]
categories = ["science", "algorithms"]

[lib]
name = "molpack"

[dependencies]
# Path deps are for local development; `version` fields are used by
# `cargo publish` to resolve against the crates.io registry.
#
# Library-required. The merged `molcrafts-molrs` crate exposes its former member
# crates as feature-gated modules: `core` is always on (re-exported at the crate
# root), while `io` and `ff` are opt-in via the molpack features below.
molrs = { path = "../molrs/molrs", version = "0.1.3", package = "molcrafts-molrs", default-features = false }
rand = "0.9"
ndarray = "0.17"
log = "0.4"
# Provides `erf` for the profile-distribution penalties (the error-function
# interface profile); `erf` is not in Rust stable std. Already in the lockfile
# as a transitive dep of molrs-core, so this adds no new download.
libm = "0.2"

# Opt-in parallelism:
rayon = { version = "1.11", optional = true }

# CLI-only:
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = []
rayon = ["dep:rayon", "molrs/rayon"]
# Pulls in molrs's `io` module for the built-in script loader, example programs,
# and the molpack CLI. PyO3 / WASM front-ends typically leave this off and
# provide their own frame loader through `Script::lower` + `Target::from_frame_parts`.
io = ["molrs/io"]
# Enables the `molpack` binary and its integration tests.
cli = ["dep:clap", "io"]
# Force-field geometry relaxer: enables molrs's `ff` module (MMFF typifier +
# L-BFGS minimizer) so packing can relax flexible-molecule internal geometry.
ff = ["molrs/ff"]

[dev-dependencies]
# Used by the example programs under `examples/`.
env_logger = "0.11"
# Criterion harness for the benchmark suite under `benches/`.
criterion = "0.5"

[[bin]]
name = "molpack"
path = "src/bin/molpack/main.rs"
required-features = ["cli"]

[[test]]
name = "cli"
path = "tests/cli.rs"
required-features = ["cli"]

# Uses the `cases` example harness, which reads PDB files via molrs-io.
[[test]]
name = "examples_batch"
path = "tests/examples_batch.rs"
required-features = ["io"]

# Example programs all read PDB files via molrs-io directly, so they need
# the `io` feature on. Run with `cargo run --example <name> --features io`.
[[example]]
name = "pack_mixture"
path = "examples/pack_mixture/main.rs"
required-features = ["io"]

[[example]]
name = "pack_bilayer"
path = "examples/pack_bilayer/main.rs"
required-features = ["io"]

[[example]]
name = "pack_interface"
path = "examples/pack_interface/main.rs"
required-features = ["io"]

[[example]]
name = "pack_solvprotein"
path = "examples/pack_solvprotein/main.rs"
required-features = ["io"]

[[example]]
name = "pack_spherical"
path = "examples/pack_spherical/main.rs"
required-features = ["io"]

# Parallel-scaling measurement harness (molpack-jcc paper figure). Needs rayon,
# not io.
[[example]]
name = "mt_scaling"
path = "examples/mt_scaling/main.rs"
required-features = ["rayon"]

[profile.release]
lto = "thin"
codegen-units = 1
