[package]
name = "molpack-python"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["MolCrafts"]
license = "BSD-3-Clause"
description = "Python bindings for molpack molecular packing"
repository = "https://github.com/MolCrafts/molpack"
homepage = "https://github.com/MolCrafts/molpack"

[lib]
name = "molpack_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
ndarray = "0.17"
molpack = { path = "..", package = "molcrafts-molpack", version = "0.1.0" }
# Same crate (and version) molpack links, so frame types unify across the wheel.
# The merged `molcrafts-molrs` crate exposes core at its root with default
# features off (matching molpack's dependency), so the wheel stays io/ff-free.
molrs = { path = "../../molrs/molrs", package = "molcrafts-molrs", version = "0.1.3", default-features = false }
# Stable FFI handle layer. molpack resolves molrs/molpy Python objects to
# `molrs_ffi::{FrameRef, ForceFieldRef}` capsules (zero-copy) instead of dict
# marshalling — see `src/interop.rs`. Pinned to the same 0.1.3 molrs-python
# links, so the handle types and the `molrs::Frame` they lend share one layout
# (path+version managed manually, per project convention).
molrs-ffi = { path = "../../molrs/molrs-ffi", package = "molcrafts-molrs-ffi", version = "0.1.3" }
# Direct rayon dep so the binding can introspect/configure the global pool
# (`num_threads`, `init_thread_pool`); shares the same process-global pool
# molpack's parallel evaluator runs on. Gated behind the `rayon` feature.
rayon = { version = "1.11", optional = true }

# Standalone package — not a member of any outer workspace.
[workspace]

[features]
# The force-field relaxer (`ff`) is a mandatory part of the wheel — the Python
# API (`LBFGSRelaxer`, `Target.with_relaxer`) always ships. Build it plain:
# `maturin develop` / `maturin build` need no extra flags.
default = ["ff"]
# Forward the parallel evaluator into the wheel. Enabling this compiles the
# rayon code paths in molpack (and `molrs/rayon`); without it the binding's
# `with_parallel_eval(True)` raises instead of silently no-op'ing.
rayon = ["dep:rayon", "molpack/rayon"]
# Force-field relaxer: pulls molrs's `ff` module into the wheel (MMFF + L-BFGS +
# the LAMMPS force-field reader / `to_potentials`) and exposes `LBFGSRelaxer` +
# `Target.with_relaxer` for relaxation-assisted packing.
ff = ["molpack/ff", "molrs/ff", "molrs-ffi/ff"]
